--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>Hello from h1</h1>
+    </div>
     <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
